header z-index fix

--- a/components/layouts/header/header.module.css
+++ b/components/layouts/header/header.module.css
@@ -5,7 +5,7 @@
     top: 0;
     background: linear-gradient(180deg, rgba(166, 166, 166, 0.00) -29.41%, rgba(166, 166, 166, 0.14) 100%);
     backdrop-filter: blur(30px);
-    z-index: 2;
+    z-index: 1000;
 }
 
 .header {
